Readme gives link to github

--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
@@ -43,7 +43,7 @@
     <PropertyGroup>
         <DocumentationFile>BeatSaberModdingTools.Tasks.xml</DocumentationFile>
         <PackageTags>Beat Saber;BeatSaberModdingTools</PackageTags>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageReadmeFile>package_readme.md</PackageReadmeFile>
         <PackageReleaseNotes>* PluginVersion bug fix with GenerateManifest.
         * Added property to specify the game exe.
         </PackageReleaseNotes>
@@ -52,7 +52,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="$(SolutionDir)README.md" Pack="true" PackagePath="\" />
+        <None Include="package_readme.md" Pack="true" PackagePath="\" />
         <Content Include="BeatSaberModdingTools.Tasks.TargetFramework.props" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.props" />
         <Content Include="BeatSaberModdingTools.Tasks.targets" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.targets" />
         <Content Include="BSMT.RequiredTargets.targets">
