--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
@@ -44,8 +44,7 @@
         <DocumentationFile>BeatSaberModdingTools.Tasks.xml</DocumentationFile>
         <PackageTags>Beat Saber;BeatSaberModdingTools</PackageTags>
         <PackageReadmeFile>package_readme.md</PackageReadmeFile>
-        <PackageReleaseNotes>* PluginVersion bug fix with GenerateManifest.
-        * Added property to specify the game exe.
+        <PackageReleaseNotes>* Version is set if AssemblyInfo.cs is read.
         </PackageReleaseNotes>
         <PackageIcon>bsmt.tasks_icon.png</PackageIcon>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
