--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <id>BeatSaberModdingTools.Tasks</id>
         <Title>BeatSaberModdingTools.Tasks</Title>
-        <Version>2.0.0-beta4</Version>
+        <Version>2.0.0-beta5</Version>
         <Authors>Zingabopp</Authors>
         <Company>Zingabopp</Company>
         <Description>A set of MSBuild Tasks created for Beat Saber Modding Tools.</Description>
@@ -114,8 +114,15 @@
   </ItemGroup>-->
 
     <Target Name="GithubActionsInfo" AfterTargets="Pack">
-        <Message Text="::set-output name=filename::$(AssemblyName)-$(PackageVersion)" Importance="high" />
-        <Message Text="::set-output name=assemblyname::$(AssemblyName)" Importance="high" />
+        <PropertyGroup Condition="'$(GITHUB_OUTPUT)' == ''">
+            <GITHUB_OUTPUT>test.txt</GITHUB_OUTPUT>
+        </PropertyGroup>
+        <ItemGroup>
+            <GithubOutputs Include="filename=$(AssemblyName)-$(PackageVersion)" />
+            <GithubOutputs Include="assemblyname=$(AssemblyName)" />
+        </ItemGroup>
+        <Message Text="Writing to environment file: $(GITHUB_OUTPUT)" Importance="high" />
+        <WriteLinesToFile File="$(GITHUB_OUTPUT)" Lines="@(GithubOutputs)" Encoding="Unicode" />
     </Target>
     <Target Name="CopyToLocalNuget" AfterTargets="Pack" Condition="'$(ContinuousIntegrationBuild)' != 'True'">
         <Message Text="Output: '$(OutDir)..\$(AssemblyName).$(PackageVersion).nupkg' -&gt; '$(HOMEDRIVE)$(HOMEPATH)\Nuget\$(AssemblyName)-$(PackageVersion).nupkg'" Importance="high" />
