--- a/BeatSaberModdingTools.Tasks/BuildTypes/BSMT.BSIPA.targets
+++ b/BeatSaberModdingTools.Tasks/BuildTypes/BSMT.BSIPA.targets
@@ -47,11 +47,13 @@
                           BaseManifestPath="$(ManifestPath)" TargetPath="$(IntermediateOutputPath)manifest.json"
                           RequiresBsipa="$(RequiresBsipa)">
             <Output TaskParameter="PluginVersion" PropertyName="PluginVersion" />   
-            <Output TaskParameter="BasePluginVersion" PropertyName="BasePluginVersion" />            
+            <Output TaskParameter="BasePluginVersion" PropertyName="BasePluginVersion" />
+            <Output TaskParameter="GameVersion" PropertyName="GameVersion" />
         </GenerateManifest>
         <Message Text="   Output Properties:" Importance="high" />
         <Message Text="      PluginVersion= '$(PluginVersion)'" Importance="high" />
         <Message Text="      BasePluginVersion= '$(BasePluginVersion)'" Importance="high" />
+        <Message Text="      GameVersion= '$(GameVersion)'" Importance="high" />
         <ItemGroup Condition="'$(DisableManifestEmbed)' != 'True'">
             <EmbeddedResource Include="$(IntermediateOutputPath)manifest.json" LogicalName="$(AssemblyName).manifest.json" />
         </ItemGroup>
