SetActionOutput uses `GithubOutputPath` project property for output path

--- a/BeatSaberModdingTools.Tasks/BSMT.DefaultProps.props
+++ b/BeatSaberModdingTools.Tasks/BSMT.DefaultProps.props
@@ -11,6 +11,7 @@
     
     <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
         <ContinuousIntegrationBuild Condition="'$(ContinuousIntegrationBuild)' == ''">true</ContinuousIntegrationBuild>
+        <GithubOutputPath Condition="'$(GithubOutputPath)' == ''">$(GITHUB_OUTPUT)</GithubOutputPath>
     </PropertyGroup>
     
     <PropertyGroup Condition="'$(NCrunch)' == '1'">
